@@ -121,6 +121,7 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/author_grid.rb",
     "test/rails_app/app/components/book_form.rb",
     "test/rails_app/app/components/book_grid.rb",
+    "test/rails_app/app/components/book_grid_with_default_values.rb",
     "test/rails_app/app/components/book_grid_with_virtual_attributes.rb",
     "test/rails_app/app/components/book_presentation.rb",
     "test/rails_app/app/components/books_bound_to_author.rb",
@@ -241,6 +242,7 @@ Gem::Specification.new do |s|
     "test/rails_app/app/components/author_grid.rb",
     "test/rails_app/app/components/book_form.rb",
     "test/rails_app/app/components/book_grid.rb",
+    "test/rails_app/app/components/book_grid_with_default_values.rb",
     "test/rails_app/app/components/book_grid_with_virtual_attributes.rb",
     "test/rails_app/app/components/book_presentation.rb",
     "test/rails_app/app/components/books_bound_to_author.rb",
