@@ -4,9 +4,13 @@
 * refactoring
 	* GridPanel code restructured, using the new +js_mixin+ method
 
+* bug fix
+  * GridPanel respects strong_default_attrs
+
 * enhancements
 	* new +getter+ config option for columns/fields, a lambda receiving the record as parameter
 	* new +setter+ config option for columns/fields, a lambda receiving the record as first parameter, new value as the second
+	* GridPanel passes columns' default values to the "Add in form" form
 
 = v0.6.2 - 2010-11-05
 * compatibility with netzke-core 0.6.4
